<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nyat Surfing</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="back_button">&lt;&lt;Back</string>
    <string name="home_button">Home</string>
    <string name="bookmark_button">Bookmark</string>
    <string name="close_button">Close</string>
    <string name="reload_button">Reload</string>
    <string name="memo_button">Memo</string>
    <string name="done_button">Done</string>
    <string name="cancel_button">Cancel</string>
    <string name="capture_button">Capture</string>
    <string name="input_hint">Please input.</string>
    <string name="home_url_default">http://www.google.com</string>
    <string name="please_select">Please select.</string>
    <string name="copy_question">Are you sure you want to copy the Url?</string>
    <string name="no_bookmarks">There are no bookmarks.</string>
    <string name="add_bookmark">Add current page</string>
    <string name="added_bookmark">Added</string>
    <string name="finish_question">Are you sure you want to exit?</string>
    <string name="capture_success">Saved at %1$s</string>
    <string name="capture_failed">Sorry, failed</string>
    <string name="capture_failed_nosdcard">No sdcard</string>
    <string name="show_ad">advertising</string>
    <string name="view">View</string>
    <string name="cannot_view">Sorry, failed</string>

    <string name="setting_home_url">HOME URL</string>
    <string name="setting_enable_javascript">Enable JavaScript</string>
    <string name="setting_capture_quality">Capture Quality</string>
    
    <string name="byebye_msg_1">God bless you.</string>
    <string name="byebye_msg_2">Good luck!</string>
    
    <string name="prefs_open_source">NOTICE</string>
    <string name="open_source_notice">MemoBrowser\n   Copyright 2013 torifuku kaiou\n\nThis product includes software developed at The Apache Software Foundation (http://www.apache.org/).\n\nPortions of this software were developed at The Android Open Source Project.\n\nThis software contains code derived from The Android Open Source Project.\n\nThe original software is available from\nhttp://developer.android.com/index.html\nhttp://source.android.com</string>
</resources>