<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/action_back"
        android:title="@string/back_button"
        android:icon="@drawable/ic_menu_back"
        android:orderInCategory="1"
        android:showAsAction="always" />
    
    <item android:id="@+id/action_bookmark"
        android:title="@string/bookmark_button"
        android:icon="@drawable/ic_menu_star"
        android:orderInCategory="1"
        android:showAsAction="always" />
 
    <item android:id="@+id/action_memo"
        android:title="@string/memo_button"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="1"
        android:showAsAction="always" />
    
    <item
        android:id="@+id/action_capture"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/capture_button"/>

    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/close_button"/>
    
    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/reload_button"/>
    
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/home_button"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_settings"/>

</menu>