<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference
        android:key="home_url"
        android:title="@string/setting_home_url"
        android:defaultValue="@string/home_url_default"/>
    <CheckBoxPreference
        android:key="enable_java_script"
        android:defaultValue="true"
        android:title="@string/setting_enable_javascript"/>
    <ListPreference
        android:key="capture_quality"
        android:title="@string/setting_capture_quality"
        android:entries="@array/capture_qualitys"
        android:entryValues="@array/capture_qualitys_values"
        android:defaultValue="1" />
    <Preference android:title="@string/prefs_open_source" >
        <intent
            android:targetClass="jp.torifuku.memobrowser.AdActivity"
            android:targetPackage="jp.torifuku.memobrowser" />
    </Preference>
    <Preference android:selectable="false" android:layout="@layout/ad_layout" />

</PreferenceScreen>