<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/operationbarLinearLayout"
            android:gravity="center" >

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_button" />
            
            <Button
                android:id="@+id/bookmark_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookmark_button" />
            
            <Button
                android:id="@+id/memo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memo_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/editTextLinearLayout"
            android:visibility="gone" >
            <EditText
                android:id="@+id/editText"
                android:layout_width="0.0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:imeOptions="actionDone"
                android:hint="@string/input_hint"
                android:ems="10" >
            </EditText>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <Button
                    android:id="@+id/done_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done_button" />
                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_button" />
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/surfing_imageView"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
				android:visibility="gone"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>